Fix Feature Policy header replication in site-isolation.

The ToWebParsedFeaturePolicy method was not constructing the
WebParsedFeaturePolicy struct correctly, so remote frames would only receive
empty whitelists when the FP header was replicated from their local process.

BUG=683199,672546
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_site_isolation

Review-Url: https://codereview.chromium.org/2644233005
Cr-Commit-Position: refs/heads/master@{#445714}

Former-commit-id: 6fafd01c2b16b4c4b23e3fb83c80722f36a3bb14